src/objects/Impact__c.object
<CustomObject>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Impacts</relationshipLabel>
        <relationshipName>Impacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Impact_Type__c</fullName>
        <label>Impact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Impact</label>
    <nameField>
        <label>Impact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>